--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-<div class="article-navigation">
+<div class="article-navigation" id="container">
   {% for item in site.categories.articles limit:40 offset:0 %}
-    <a class="article-link" href="{{site.baseurl}}{{item.url}}" title="{{item.title}}">
+    <a class="article-link item" href="{{site.baseurl}}{{item.url}}" title="{{item.title}}">
       {{item.title}}
     </a>
   {% endfor %}
