--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="article-navigation" id="container">
+<div class="article-navigation" id="montainer">
   {% for item in site.categories.articles limit:40 offset:0 %}
     <a class="article-link item" href="{{site.baseurl}}{{item.url}}" title="{{item.title}}">
       {{item.title}}
