--- a/index.html
+++ b/index.html
@@ -2,14 +2,6 @@
 layout: default
 ---
 
-<div class="article-navigation" id="montainer">
-  {% for item in site.categories.articles limit:40 offset:0 %}
-    <a class="article-link item" href="{{site.baseurl}}{{item.url}}" title="{{item.title}}">
-      {{item.title}}{{item.abstract}}
-    </a>
-  {% endfor %}
-</div>
-
 {% for item in site.categories.articles limit:1 offset:0 %}
   <div class="intro">
     <div class="title">{{item.title}}</div>
@@ -23,4 +15,12 @@ layout: default
     </div>
   </div>
 {% endfor %}
+
+<div class="article-navigation" id="montainer">
+  {% for item in site.categories.articles limit:40 offset:0 %}
+    <a class="article-link item" href="{{site.baseurl}}{{item.url}}" title="{{item.title}}">
+      <strong>{{item.title}}</strong></br>{{item.abstract}}
+    </a>
+  {% endfor %}
+</div>
 
