--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
   <div class="article-wrapper">
     <div class="help post-content">
       {{ item.content }}
-      <div class="meta"> Posted by <a href="http://twitter.com/{{item.author_twitter}}">{{item.author}}</a> on {{ item.date | date: "%B %d, %Y" }} </div>
+      <div class="meta"> / / Article posted by <a href="http://twitter.com/{{item.author_twitter}}">{{item.author}}</a> on {{ item.date | date: "%B %d, %Y" }} </div>
       </div>
     </div>
 {% endfor %}
