--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@ layout: default
 ---
 
 {% for item in site.categories.articles limit:1 offset:0 %}
-  <div class="intro">
-    <div class="title">{{item.title}}</div>
-    <div class="abstract">{{item.abstract}}</div>
-  </div>
+<div class="intro">
+  <h1 class="title">{{page.title}}: <small class="abstract">{{page.abstract}}</small></h1>
+</div>
+<hr>
 
   <div class="article-wrapper">
     <div class="help post-content">
