--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
----
+ ---
 layout: default
 ---
 
@@ -14,6 +14,14 @@ layout: default
     </div>
   </div>
 {% endfor %}
+
+<div>
+  {% for item in site.categories.articles limit:40 offset:1 %}
+    <a href="{{site.baseurl}}{{item.url}}" title="{{item.title}}">
+      {{item.title}}
+    </a>
+  {% endfor %}
+</div>
 
 <!-- <div class="article-navigation" id="montainer">
   {% for item in site.categories.articles limit:40 offset:0 %}
