--- a/index.html
+++ b/index.html
@@ -15,18 +15,13 @@ layout: default
   </div>
 {% endfor %}
 
-{% for item in site.categories.releases limit:1 offset:0 %}
-<div class="intro">
-  <h1 class="title">{{item.headline}}: <small class="abstract">{{item.introduction}}</small></h1>
+<div>
+  {% for item in site.categories.releases limit:40 offset:0 %}
+    <a href="{{site.baseurl}}{{item.url}}" title="{{item.introduction}}">
+      {{item.introduction}}
+    </a>
+  {% endfor %}
 </div>
-<hr>
-
-  <div class="article-wrapper">
-    <div class="help post-content">
-      {{ item.content }}
-    </div>
-  </div>
-{% endfor %}
 
 <div>
   {% for item in site.categories.articles limit:40 offset:1 %}
