--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 layout: default
 ---
 
-
-{% for item in site.categories.releases limit:1 offset:0 %}
+<!-- {% for item in site.categories.releases limit:1 offset:0 %}
 <div class="intro">
   <h1 class="title">{{item.headline}}: <small class="abstract">{{item.introduction}}</small></h1>
 </div>
@@ -11,12 +10,26 @@ layout: default
 
 <div class="article-wrapper">
   <div class="help post-content">
-    {{item.content}}
+    {{ item.content }}
   </div>
   <div class="boilerplate">
     {{item.boilerplate}}
   </div>
+</div> -->
+
+
+{% for item in site.categories.articles limit:1 offset:0 %}
+<div class="intro">
+  <h1 class="title">{{item.title}}: <small class="abstract">{{item.abstract}}</small></h1>
 </div>
+<hr>
+
+  <div class="article-wrapper">
+    <div class="help post-content">
+      {{ item.content }}
+    </div>
+  </div>
+{% endfor %}
 
 <div>
   {% for item in site.categories.releases limit:40 offset:1 %}
@@ -25,3 +38,20 @@ layout: default
     </a>
   {% endfor %}
 </div>
+
+<!-- <div>
+  {% for item in site.categories.articles limit:40 offset:1 %}
+    <a href="{{site.baseurl}}{{item.url}}" title="{{item.title}}">
+      {{item.title}}
+    </a>
+  {% endfor %}
+</div> -->
+
+<!-- <div class="article-navigation" id="montainer">
+  {% for item in site.categories.articles limit:40 offset:0 %}
+    <a class="article-link item {{item.columns}}" href="{{site.baseurl}}{{item.url}}" title="{{item.title}}">
+      <strong>{{item.title}}</strong></br>{{item.abstract}}
+    </a>
+  {% endfor %}
+</div> -->
+
